# embedded-systems-fuzzy-project

./: .gitignore  README.md  roadmap.txt
app/: main.py
app/api/: schemas.py
app/controllers/: simulation.py
backend/: pyproject.toml
backend/app/: main.py  test_fuzzy.py  test_mqtt.py
backend/app/api/: endpoints.py  schemas.py
backend/app/controllers/: fuzzy_controller.py  mqtt_broker.py  physical_model.py  simulation.py  test_sim_24h.py
backend/app/core/: config.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/common/: GlobalHeaderWrapper.tsx  InputPanel.tsx  Topbar.tsx
frontend/src/components/ui/: simulationChart.tsx
frontend/src/hooks/: useMqttStatus.ts
frontend/src/layouts/: Layout.tsx
frontend/src/lib/: api.ts  chart.ts
frontend/src/pages/: Home.tsx  Inference.tsx  Membership.tsx  Mqtt.tsx  Simulation.tsx
frontend/src/services/: fuzzyService.ts  mqttService.ts
frontend/src/store/: useControlStore.ts
